Project2/electro-chart/security/networkpolicies/networkpolicy-api.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-ingress
  namespace:  my-ns1
spec:
  podSelector:
    matchLabels:
      app: electro-api
  policyTypes:
    - Ingress
  ingress:
    # -  ports:
    #     - protocol:  TCP
    #       port: 5000
    #
    -  {} 


    #  allow ingress to the api pods on   TCP/5000  from any  source
